Wed May  7 18:09:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed multicast to work with multiple participants in one process.
          Added map keyed on the local peer (domain participant) instead of
          having one client and server links for all local peers.

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:

          Added passing the local peer to pending_connection.

        * tests/DCPS/ManyToMany/run_test.pl:

          Turned off Built in Topics.

Fri May  2 20:21:04 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ConfigTransports/run_test.pl:

          Increase process timeout to 30 seconds (from 5).

Fri May  2 19:13:06 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Federation/Publisher.cpp:
        * tests/DCPS/Federation/Subscriber.cpp:

          Cleanup publisher, subscriber.

Thu May  1 13:30:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/TransientLocalTest/publisher.cpp:

          Removed whitespace.

Wed Apr 30 20:41:22 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

Wed Apr 30 19:35:16 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:
        * dds/DCPS/DataSampleHeader.h:

          Add control message END_HISTORIC_SAMPLES, add place to track
          durable writers who have sent it.

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Filter out data samples for durable writers for whom we have not
          received END_HISTORIC_SAMPLES.
          Upon receipt of END_HISTORIC_SAMPLES, stop filtering that writer.

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
