@@ -143,14 +143,18 @@ int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
       writer.write();
     }
 
+    ACE_DEBUG((LM_DEBUG, ACE_TEXT("%T (%P|%t) Writers Done\n")));
+
     for (Participants::iterator part = participants.begin();
          part != participants.end();
          ++part, ++ws.message.participant_id) {
-      ACE_DEBUG((LM_DEBUG, ACE_TEXT("(%P|%t) Cleanup Participant\n")));
+      ACE_DEBUG((LM_DEBUG, ACE_TEXT("%T (%P|%t) Cleanup Participant\n")));
       // Clean-up!
       (*part)->delete_contained_entities();
       dpf->delete_participant(part->in());
     }
+
+    ACE_DEBUG((LM_DEBUG, ACE_TEXT("%T (%P|%t) Publisher shutting down\n")));
 
     TheServiceParticipant->shutdown();
 
@@ -159,5 +163,6 @@ int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     ACE_OS::exit(-1);
   }
 
+  ACE_DEBUG((LM_DEBUG, ACE_TEXT("%T (%P|%t) Publisher exiting\n")));
   return 0;
 }
